Fixed out of bounds experiment window and broken start experiment button

--- a/app/components/styles/collect.css
+++ b/app/components/styles/collect.css
@@ -7,7 +7,7 @@
 
 .connectModal a {
   text-decoration: underline;
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .connectHeader {
@@ -56,6 +56,7 @@
 .previewExpComponent {
   height: 100%;
   width: 100%;
+  display: flex;
 }
 
 .primaryButton {
